# sdkwork-customerservice

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json  tsconfig.base.json  tsconfig.json
.github/workflows/: governance.yml  package.yml
apps/: README.md
apps/sdkwork-customerservice-common/: README.md
apps/sdkwork-customerservice-flutter/: README.md  pubspec.yaml  sdkwork.app.config.json
apps/sdkwork-customerservice-h5/: index.html  package.json  sdkwork.app.config.json  vite.config.ts
apps/sdkwork-customerservice-pc/: .env.example  index.html  package.json  sdkwork.app.config.json  tsconfig.json  vite.config.ts
configs/: sdkwork-api-cloud-gateway.customerservice.development.toml  sdkwork-api-cloud-gateway.customerservice.production.toml
configs/topology/: README.md  cloud.development.env  standalone.development.env  standalone.unified-process.development.env
crates/sdkwork-api-customerservice-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-customerservice-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-customerservice-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-customerservice-assembly/tests/: gateway_infra_contract.rs  postgres_http_integration.rs
crates/sdkwork-api-customerservice-standalone-gateway/: Cargo.toml
crates/sdkwork-api-customerservice-standalone-gateway/src/: main.rs
crates/sdkwork-communication-customerservice-plugin-host/: Cargo.toml
crates/sdkwork-communication-customerservice-plugin-host/src/: delivery_evaluation.rs  lib.rs
crates/sdkwork-communication-customerservice-plugin-runtime/: Cargo.toml
crates/sdkwork-communication-customerservice-plugin-runtime/src/: lib.rs  manager.rs
crates/sdkwork-communication-customerservice-plugin-spi/: Cargo.toml
crates/sdkwork-communication-customerservice-plugin-spi/src/: error.rs  lib.rs  model.rs  ports.rs  traits.rs
crates/sdkwork-communication-customerservice-repository-sqlx/: Cargo.toml
crates/sdkwork-communication-customerservice-repository-sqlx/src/: channel.rs  lib.rs  postgres.rs
crates/sdkwork-communication-customerservice-repository-sqlx/tests/: postgres_ticket_repository.rs
crates/sdkwork-communication-customerservice-service/: Cargo.toml
crates/sdkwork-communication-customerservice-service/src/: credential_crypto.rs  error.rs  lib.rs  validation.rs
crates/sdkwork-communication-customerservice-service/src/runtime/: channel_domain.rs  channel_ports.rs  domain.rs  mod.rs  ports.rs  service.rs
crates/sdkwork-communication-customerservice-service/src/testing/: memory_ticket_repository.rs  mod.rs
crates/sdkwork-customerservice-database-host/: Cargo.toml
crates/sdkwork-customerservice-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-customerservice-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-customerservice-gateway-assembly/tests/: postgres_http_integration.rs
crates/sdkwork-customerservice-service-host/: Cargo.toml
crates/sdkwork-customerservice-service-host/src/: lib.rs
crates/sdkwork-customerservice-standalone-gateway/: Cargo.toml
crates/sdkwork-customerservice-standalone-gateway/src/: main.rs
crates/sdkwork-routes-customerservice-app-api/: Cargo.toml
crates/sdkwork-routes-customerservice-app-api/specs/: component.spec.json
crates/sdkwork-routes-customerservice-app-api/src/: app_routes.rs  http_integration_tests.rs  http_route_manifest.rs  lib.rs  paths.rs  response.rs  routes.rs  subject.rs  ticket_api_port.rs  web_bootstrap.rs
crates/sdkwork-routes-customerservice-backend-api/: Cargo.toml
crates/sdkwork-routes-customerservice-backend-api/specs/: component.spec.json
crates/sdkwork-routes-customerservice-backend-api/src/: backend_routes.rs  backend_ticket_admin_port.rs  http_integration_tests.rs  http_route_manifest.rs  lib.rs  paths.rs  response.rs  routes.rs  subject.rs  web_bootstrap.rs
crates/sdkwork-routes-customerservice-internal-api/: Cargo.toml
crates/sdkwork-routes-customerservice-internal-api/specs/: component.spec.json
crates/sdkwork-routes-customerservice-internal-api/src/: http_route_manifest.rs  ingress_auth.rs  internal_routes.rs  lib.rs  response.rs  routes.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
deployments/: README.md  deploy.yaml
docs/: INDEX.yaml  README.md
etc/: sdkwork-api-cloud-gateway.customerservice.production.toml
plugins/: README.md
plugins/sdkwork-customerservice-plugin-goofish/: Cargo.toml  README.md  sdkwork.plugin.manifest.json
plugins/sdkwork-customerservice-plugin-goofish/crates/sdkwork-customerservice-plugin-goofish-runtime/: Cargo.toml
plugins/sdkwork-customerservice-plugin-goofish/crates/sdkwork-customerservice-plugin-goofish-runtime/src/: account_runtime.rs  lib.rs  plugin.rs
plugins/sdkwork-customerservice-plugin-goofish/crates/sdkwork-customerservice-plugin-goofish-runtime/src/capabilities/: auto_reply.rs  delivery_rules.rs  ingest.rs  mod.rs  orders.rs  protocol.rs  session.rs  sync_decrypt.rs  transport.rs  websocket_worker.rs
plugins/sdkwork-customerservice-plugin-goofish/docs/schema-registry/overlays/: goofish.tables.yaml
plugins/sdkwork-customerservice-plugin-goofish/specs/: component.spec.json
scripts/: README.md
specs/: PLUGIN_SYSTEM_SPEC.md  README.md  component.spec.json  iam.module.manifest.json  plugin-system.registry.json  topology.spec.json
tools/: check-topology-profile-consistency.mjs  customerservice_db_sync_registry.mjs  customerservice_gateway_smoke.mjs  customerservice_openapi_align.mjs  customerservice_openapi_domain.mjs  customerservice_openapi_export.mjs  customerservice_openapi_normalize.mjs  customerservice_openapi_shared.mjs  customerservice_plugin_validate.mjs  customerservice_postgres_test_required.mjs  customerservice_route_manifest_export.mjs  customerservice_sdk_generate.mjs  scaffold_customerservice_workspace.mjs
(+59 files in other folders)
