[workspace]
resolver = "2"
members = [
    "crates/sdkwork-customerservice-gateway-assembly",
    "crates/sdkwork-communication-customerservice-plugin-spi",
    "crates/sdkwork-communication-customerservice-plugin-host",
    "crates/sdkwork-communication-customerservice-plugin-runtime",
    "crates/sdkwork-communication-customerservice-service",
    "crates/sdkwork-communication-customerservice-repository-sqlx",
    "crates/sdkwork-routes-customerservice-app-api",
    "crates/sdkwork-routes-customerservice-backend-api",
    "crates/sdkwork-routes-customerservice-internal-api",
    "crates/sdkwork-customerservice-database-host",
    "crates/sdkwork-customerservice-service-host",
    "crates/sdkwork-customerservice-standalone-gateway",
    "plugins/sdkwork-customerservice-plugin-goofish/crates/sdkwork-customerservice-plugin-goofish-runtime",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
thiserror = "1"
async-trait = "0.1"
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork_iam_context_service = { path = "../sdkwork-iam/crates/sdkwork-iam-context-service", package = "sdkwork-iam-context-service" }
sdkwork-customerservice-gateway-assembly = { path = "crates/sdkwork-customerservice-gateway-assembly" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-database-ops-http = { path = "../sdkwork-database/crates/sdkwork-database-ops-http" }
sdkwork_utils_rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust", package = "sdkwork-utils-rust" }
sdkwork_communication_customerservice_service = { path = "crates/sdkwork-communication-customerservice-service", package = "sdkwork-communication-customerservice-service" }
sdkwork_communication_customerservice_repository_sqlx = { path = "crates/sdkwork-communication-customerservice-repository-sqlx", package = "sdkwork-communication-customerservice-repository-sqlx" }
sdkwork_communication_customerservice_plugin_spi = { path = "crates/sdkwork-communication-customerservice-plugin-spi", package = "sdkwork-communication-customerservice-plugin-spi" }
sdkwork_communication_customerservice_plugin_host = { path = "crates/sdkwork-communication-customerservice-plugin-host", package = "sdkwork-communication-customerservice-plugin-host" }
sdkwork_communication_customerservice_plugin_runtime = { path = "crates/sdkwork-communication-customerservice-plugin-runtime", package = "sdkwork-communication-customerservice-plugin-runtime" }
sdkwork_routes_customerservice_internal_api = { path = "crates/sdkwork-routes-customerservice-internal-api", package = "sdkwork-routes-customerservice-internal-api" }
sdkwork_routes_customerservice_app_api = { path = "crates/sdkwork-routes-customerservice-app-api", package = "sdkwork-routes-customerservice-app-api" }
sdkwork_routes_customerservice_backend_api = { path = "crates/sdkwork-routes-customerservice-backend-api", package = "sdkwork-routes-customerservice-backend-api" }
sdkwork_customerservice_database_host = { path = "crates/sdkwork-customerservice-database-host", package = "sdkwork-customerservice-database-host" }
sdkwork_customerservice_plugin_goofish = { path = "plugins/sdkwork-customerservice-plugin-goofish/crates/sdkwork-customerservice-plugin-goofish-runtime", package = "sdkwork-customerservice-plugin-goofish-runtime" }
sdkwork_customerservice_service_host = { path = "crates/sdkwork-customerservice-service-host", package = "sdkwork-customerservice-service-host" }
