[package]
name = "sdkwork-api-customerservice-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-customerservice application HTTP plane."

[lib]
name = "sdkwork_api_customerservice_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sqlx = { workspace = true }
sdkwork_customerservice_service_host = { workspace = true }
sdkwork-database-sqlx = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }
sdkwork_routes_customerservice_internal_api = { package = "sdkwork-routes-customerservice-internal-api", path = "../sdkwork-routes-customerservice-internal-api" }
sdkwork-routes-customerservice-app-api = { path = "../sdkwork-routes-customerservice-app-api" }
sdkwork-routes-customerservice-backend-api = { path = "../sdkwork-routes-customerservice-backend-api" }
