[package]
name = "sdkwork-api-customerservice-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "customerservice-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower-http = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }
sdkwork-web-axum = { workspace = true }
sdkwork-web-core = { workspace = true }
sdkwork-api-customerservice-assembly.workspace = true
sdkwork_customerservice_service_host = { workspace = true }
