[package]
name = "sdkwork-communication-customerservice-plugin-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sdkwork_communication_customerservice_plugin_spi = { path = "../sdkwork-communication-customerservice-plugin-spi", package = "sdkwork-communication-customerservice-plugin-spi" }
sdkwork_communication_customerservice_service = { workspace = true }
