[package]
name = "sdkwork-communication-customerservice-plugin-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
sdkwork_communication_customerservice_plugin_spi = { workspace = true }
sdkwork_communication_customerservice_service = { workspace = true }
sdkwork_customerservice_plugin_goofish = { workspace = true }
