[package]
name = "sdkwork-communication-customerservice-plugin-spi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Channel plugin SPI for SDKWork Customer Service"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true

[lib]
path = "src/lib.rs"
