[package]
name = "sdkwork-communication-customerservice-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
sdkwork_communication_customerservice_service = { workspace = true }
sdkwork-database-sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sdkwork_customerservice_database_host = { workspace = true, features = ["test-support"] }
