[package]
name = "sdkwork-communication-customerservice-service"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sdkwork_utils_rust = { workspace = true }

[features]
test-support = []

[dev-dependencies]
tokio = { workspace = true }
