[package]
name = "sdkwork-customerservice-service-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_customerservice_database_host = { workspace = true }
sdkwork_communication_customerservice_repository_sqlx = { workspace = true }
sdkwork_communication_customerservice_service = { workspace = true }
sdkwork_communication_customerservice_plugin_host = { path = "../sdkwork-communication-customerservice-plugin-host", package = "sdkwork-communication-customerservice-plugin-host" }
sdkwork_communication_customerservice_plugin_runtime = { path = "../sdkwork-communication-customerservice-plugin-runtime", package = "sdkwork-communication-customerservice-plugin-runtime" }
sdkwork_communication_customerservice_plugin_spi = { path = "../sdkwork-communication-customerservice-plugin-spi", package = "sdkwork-communication-customerservice-plugin-spi" }
sdkwork_database_sqlx = { workspace = true }
