[package]
name = "sdkwork-customerservice-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "customerservice-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }
sdkwork-customerservice-gateway-assembly.workspace = true
sdkwork_customerservice_service_host = { workspace = true }
