[package]
name = "sdkwork-routes-customerservice-backend-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sdkwork_communication_customerservice_service = { workspace = true }
sdkwork_communication_customerservice_plugin_runtime = { workspace = true }
sdkwork_customerservice_service_host = { workspace = true }
sdkwork_iam_context_service = { workspace = true }
sdkwork-web-core = { workspace = true }
sdkwork_utils_rust = { workspace = true }
sdkwork-web-axum = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }
sdkwork-iam-web-adapter = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sdkwork_communication_customerservice_service = { workspace = true, features = ["test-support"] }
sdkwork_iam_context_service = { workspace = true }
