[package]
name = "sdkwork-routes-customerservice-internal-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sdkwork_communication_customerservice_plugin_runtime = { workspace = true }
sdkwork_communication_customerservice_plugin_spi = { workspace = true }
sdkwork_communication_customerservice_service = { workspace = true }
sdkwork_customerservice_service_host = { workspace = true }
sdkwork_utils_rust = { workspace = true }
sdkwork-web-core = { workspace = true }
sdkwork-web-axum = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
