[workspace]
members = ["crates/sdkwork-customerservice-plugin-goofish-runtime"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
sdkwork_communication_customerservice_plugin_spi = { path = "../../../crates/sdkwork-communication-customerservice-plugin-spi", package = "sdkwork-communication-customerservice-plugin-spi" }
