[package]
name = "sdkwork-customerservice-plugin-goofish-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "sdkwork_customerservice_plugin_goofish"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["rt"] }
rmpv = "1.3"
tracing = { workspace = true }
uuid = { workspace = true }
sdkwork_communication_customerservice_plugin_spi = { workspace = true }
